--- a/UberClone/Info.plist
+++ b/UberClone/Info.plist
@@ -21,5 +21,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>HTCHHKR needs your location so our drivers can find you.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>HTCHHKR needs your location so our drivers can find you.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>HTCHHKR needs your location so our drivers can find you.</string>
 </dict>
 </plist>
